[css-flexbox] ChildIntrinsicLogicalWidth should use fit-content, not max-content https://bugs.webkit.org/show_bug.cgi?id=210465

Reviewed by Javier Fernandez.

Source/WebCore:

When computing the hypothetical cross size of each item in the flexbox algorithm
the current code was using the max-size. However the specs state clearly that we
should use fit-content instead, i.e., the shrink-to-fit size.
See https://drafts.csswg.org/css-flexbox/#algo-cross-item.

Based on Blink's crrev.com/1327746 by <cbiesinger@chromium.org>

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::childIntrinsicLogicalWidth const): Use the shrink-to-fit
size instead just the max-size.

LayoutTests:

* TestExpectations: Unskipped flex-wrap-002.html which is now passing.

Canonical link: https://commits.webkit.org/225458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262411 268f45cc-cd09-0410-ab3c-d52691b4dbfc